--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.15.3",
 		"@mui/material": "^5.15.3",
+		"@reduxjs/toolkit": "^2.0.1",
 		"@tanstack/react-query": "^5.17.9",
 		"framer-motion": "^10.17.12",
 		"hamburger-react": "^2.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-player": "^2.14.1",
+		"react-redux": "^9.0.4",
 		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "^6.21.1",
 		"react-spinners": "^0.13.8",
