--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"hamburger-react": "^2.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-idle-timer": "^5.7.2",
 		"react-player": "^2.14.1",
 		"react-redux": "^9.0.4",
 		"react-responsive-carousel": "^3.2.23",
